Bug 246095 - File name not displayed in title bar
Summary: File name not displayed in title bar
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 00:31 UTC by allan
Modified: 2010-07-29 01:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2010-07-29 00:31:32 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

Very minor item.  Generally, the file name is displayed in the title bar.

However, while KMM is checking for overdue scheduled items, 'Untitled' is displayed instead.  Before going ahead with accepting overdue items, I usually check to ensure I'm on the latest file, so I'm left a little bit uncertain whether I should go ahead, or re-open the file to make sure.

Reproducible: Sometimes

Steps to Reproduce:
Open a file that has overdue scheduled items.

Actual Results:  
File name not displayed in title bar.

Expected Results:  
File name displayed in title bar.
Comment 1 Alvaro Soliverez 2010-07-29 01:42:47 UTC
SVN commit 1156354 by asoliverez:

Once the file is open, update the caption of the application window.

BUG:246095

 M  +1 -0      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1156354