Once the file is open, update the caption of the application window.

BUG:246095

svn path=/trunk/extragear/office/kmymoney/; revision=1156354